@@ -37,7 +37,7 @@
 #include <sys/mman.h>
 #endif
 
-ELFTC_VCSID("$Id: elftc_copyfile.c 2318 2011-12-11 10:54:27Z jkoshy $");
+ELFTC_VCSID("$Id: elftc_copyfile.c 2981 2014-02-01 02:41:13Z jkoshy $");
 
 /*
  * Copy the contents referenced by 'ifd' to 'ofd'.  Returns 0 on
@@ -79,7 +79,7 @@ elftc_copyfile(int ifd, int ofd)
 	 * If mmap() is not available, or if the mmap() operation
 	 * failed, allocate a buffer, and read in input data.
 	 */
-	if (!buf_mmapped) {
+	if (buf_mmapped == false) {
 		if ((buf = malloc(sb.st_size)) == NULL)
 			return (-1);
 		if (read(ifd, buf, sb.st_size) != sb.st_size) {
